--- a/build.gradle
+++ b/build.gradle
@@ -147,9 +147,14 @@ dependencies {
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
     // REI Runtime for Forge (Architectury Loom)
+    implementation fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:$rei_version")
+
+    /*
     runtimeOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-forge:$rei_version")
     compileOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-api-forge:$rei_version")
     compileOnly fg.deobf("me.shedaniel:RoughlyEnoughItems-default-plugin-forge:$rei_version")
+
+     */
 
     implementation fg.deobf("software.bernie.geckolib:geckolib-forge-$geckolib_version")
     implementation fg.deobf("me.shedaniel.cloth:cloth-config-forge:$cloth_config_version")
