forge port von paar neuen sachen (assets fehlen noch)

--- a/src/main/resources/data/vinery/recipes/wood_fired_oven_cooking/apple_pie.json
+++ b/src/main/resources/data/vinery/recipes/wood_fired_oven_cooking/apple_pie.json
@@ -8,10 +8,10 @@
       "item": "minecraft:wheat"
     },
     {
-      "item": "minecraft:sugar"
+      "item": "minecraft:cocoa_beans"
     }
   ],
-  "item": "vinery:toast",
+  "item": "vinery:chocolate_bread",
   "count": 3,
   "experience": 0.35
 }
